# Seamless-Saving-SKSE

./: .releaserc.json  README.md  package.json  xmake.lua
.buildenv/: CMakeLists.txt
.github/workflows/: build-reusable.yml  release.yml
src/hooks/SaveOptimization/: SaveOptimization.cpp
