# This file configures the "build" of this SKSE plugin
# - how to compile the C++ plugin (in addition to settings found in CMakePresets.json)
# - where to output the resulting .dll file

# It's recommended to set a minimum CMake version.
# If you use CMake features from higher versions, update this to match.
cmake_minimum_required(VERSION 3.21)

# [BEGIN set_project_name]
# Set your project name. This will be the name of your SKSE .dll file.
# Determine the project version. Prefer package.json (the authoritative
# version file).  fall back to parsing xmake.lua for compatibility.
set(_version "")
if(EXISTS "${CMAKE_SOURCE_DIR}/../package.json")
    file(READ "${CMAKE_SOURCE_DIR}/../package.json" _pkg)
    string(REGEX MATCH "\"version\"[ 	]*:[ 	]*\"([0-9]+\.[0-9]+\.[0-9]+)\"" _match "${_pkg}")
    if(_match)
        set(_version "${CMAKE_MATCH_1}")
    endif()
endif()
if(NOT _version)
    # fallback: parse xmake.lua the old way
    file(READ "${CMAKE_SOURCE_DIR}/../xmake.lua" _xmake_lua)
    string(REGEX MATCH "local version = \"([0-9]+\.[0-9]+\.[0-9]+)\"" _ "${_xmake_lua}")
    set(_version "${CMAKE_MATCH_1}")
endif()
project(SeamlessSaving VERSION ${_version} LANGUAGES CXX)

file(GLOB_RECURSE sources CONFIGURE_DEPENDS ../src/*.cpp ../src/*.h)

configure_file(version.rc.in version.rc @ONLY)
list(APPEND sources "${CMAKE_CURRENT_BINARY_DIR}/version.rc")

# [END set_project_name]

# #
# YOU DO NOT NEED TO EDIT ANYTHING BELOW HERE
# #

# If you're not using a mod manager, you probably want the SKSE plugin to go
# inside of your Skyrim "Data" folder.
#
# To do this automatically, set the `SKYRIM_FOLDER` environment variable
# to the path of your Skyrim Special Edition folder
if(DEFINED ENV{SKYRIM_FOLDER} AND IS_DIRECTORY "$ENV{SKYRIM_FOLDER}/Data")
    set(OUTPUT_FOLDER "$ENV{SKYRIM_FOLDER}/Data")
endif()

# If you're using Mod Organizer 2 or Vortex, you might want this to go inside
# of your "mods" folder, inside of a subfolder named "<your mod>".
#
# To do this automatically, set the `SKYRIM_MODS_FOLDER` environment variable
# to the path of your "mods" folder
if(DEFINED ENV{SKYRIM_MODS_FOLDER} AND IS_DIRECTORY "$ENV{SKYRIM_MODS_FOLDER}")
    set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME}")
endif()

# Otherwise, you can set OUTPUT_FOLDER to any place you'd like :)
set(OUTPUT_FOLDER "D:/SteamLibrary/steamapps/common/Skyrim Special Edition/MO2/mods/Seamless Saving")

# We no longer rely on the vcpkg copy of CommonLibSSE.  The
# repository already contains a copy of the library in `lib/commonlibsse-ng`
# (managed as a submodule), so configure CMake to look there first.  This
# also avoids pulling in the vcpkg toolchain for everything.

# If the user still has a vcpkg environment they can set VCPKG_ROOT and
# the toolchain will be included, but it will not be used for the core
# CommonLibSSE dependency by default.
if(DEFINED ENV{VCPKG_ROOT})
    include($ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
endif()

# Build CommonLibSSE from the submodule and make its cmake helpers available.
add_subdirectory("${CMAKE_SOURCE_DIR}/../lib/commonlibsse-ng" commonlibsse-build)
include("${CMAKE_SOURCE_DIR}/../lib/commonlibsse-ng/cmake/CommonLibSSE.cmake")

# Setup your SKSE plugin as an SKSE plugin!
add_commonlibsse_plugin(${PROJECT_NAME} SOURCES ${sources}) # <--- specifies plugin.cpp
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23) # <--- use C++23 standard
target_precompile_headers(${PROJECT_NAME} PRIVATE PCH.h) # <--- PCH.h is required!

find_package(minhook CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE minhook::minhook)
find_package(boost REQUIRED COMPONENTS algorithm)
target_link_directories(${PROJECT_NAME} PRIVATE boost::algorithm)
find_package(xbyak CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE xbyak::xbyak)

# When your SKSE .dll is compiled, this will automatically copy the .dll into your mods folder.
# Only works if you configure DEPLOY_ROOT above (or set the SKYRIM_MODS_FOLDER environment variable)
if(DEFINED OUTPUT_FOLDER)
    # If you specify an <OUTPUT_FOLDER> (including via environment variables)
    # then we'll copy your mod files into Skyrim or a mod manager for you!

    # Copy the SKSE plugin .dll files into the SKSE/Plugins/ folder
    set(DLL_FOLDER "${OUTPUT_FOLDER}/SKSE/Plugins")

    message(STATUS "SKSE plugin output folder: ${DLL_FOLDER}")

    add_custom_command(
        TARGET "${PROJECT_NAME}"
        POST_BUILD
        COMMAND "${CMAKE_COMMAND}" -E make_directory "${DLL_FOLDER}"
        COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_FILE_NAME:${PROJECT_NAME}>"
        VERBATIM
    )

    # If you perform a "Debug" build, also copy .pdb file (for debug symbols)
    if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
        add_custom_command(
            TARGET "${PROJECT_NAME}"
            POST_BUILD
            COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_PDB_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_PDB_FILE_NAME:${PROJECT_NAME}>"
            VERBATIM
        )
    endif()
endif()
